--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,68 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="640"
+    android:viewportHeight="640">
+  <group android:scaleX="0.56"
+      android:scaleY="0.56"
+      android:translateX="140.8"
+      android:translateY="140.8">
+    <path
+        android:pathData="M576,467.39C576,527.37 527.37,576 467.39,576L278.67,576L576,278.67z"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0"
+        android:fillType="nonZero"
+        android:strokeColor="#65579B"
+        android:strokeLineCap="butt">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="278.67"
+            android:startY="576"
+            android:endX="576"
+            android:endY="278.67"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF35ED35"/>
+          <item android:offset="1" android:color="#FFD4FFD4"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
+        android:pathData="M467.39,64C527.37,64 576,112.63 576,172.61L576,256.04L256.04,576L172.61,576C112.63,576 64,527.37 64,467.39L64,380.67L380.67,64z"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0"
         android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:strokeColor="#65579B"
+        android:strokeLineCap="butt">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="64"
+            android:startY="576"
+            android:endX="576"
+            android:endY="64"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF0083D3"/>
+          <item android:offset="1" android:color="#FF83FFCC"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M64,172.61C64,112.63 112.63,64 172.61,64L358.04,64L64,358.04z"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0"
+        android:fillType="nonZero"
+        android:strokeColor="#65579B"
+        android:strokeLineCap="butt">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="64"
+            android:startY="358.04"
+            android:endX="358.04"
+            android:endY="64"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFF4C00"/>
+          <item android:offset="1" android:color="#FFFFE98A"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
